<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".auth.ui.fragment.LoginFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/profile_color_background"
            tools:ignore="MissingClass">

            <ImageView
                android:id="@+id/backIM"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="@dimen/_15sdp"
                android:src="@drawable/arrow___left_2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/loginTitleTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_25sdp"
                android:padding="@dimen/_10sdp"
                android:text="@string/enter_you_number"
                android:textColor="@color/black"
                android:textSize="@dimen/_30sdp"
                app:fontFamily="@font/montserrat_extrabold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/backIM" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/loginTitle2TV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hello_welcome_back_to_Our_account"
                android:textSize="@dimen/_14sdp"
                android:gravity="center"
                android:textColor="@color/black"
                app:fontFamily="@font/montserrat_semibold"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_margin="@dimen/_5sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/loginTitleTV" />


            <com.hbb20.CountryCodePicker
                android:id="@+id/ccp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:background="@drawable/mobile_number_button_selection"
                android:padding="6dp"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="@+id/loginPhoneNumberET"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/loginPhoneNumberET" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/loginPhoneNumberET"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:inputType="number"
                android:textColorHint="@color/colorTextHintDefault"
                android:textColor="@color/black"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_50sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:hint="Mobile Number"
                android:singleLine="true"
                android:maxLength="10"
                android:fontFamily="@font/nunito_semibold"
                android:padding="@dimen/_10sdp"
                android:background="@drawable/mobile_number_button_selection"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/ccp"
                app:layout_constraintTop_toBottomOf="@+id/loginTitle2TV" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/requestOTPBT"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_35sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:background="@drawable/welcome_button_selection"
                android:gravity="center"
                android:text="@string/requestotp"
                android:fontFamily="@font/nunito_extrabold"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp"
                app:flow_horizontalAlign="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/loginPhoneNumberET" />


            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/loginwithIMG"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30sdp"
                android:gravity="center"
                android:src="@drawable/loginwith"
                android:textSize="@dimen/_14sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/requestOTPBT" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/googleTV"
                android:layout_width="@dimen/_120sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginStart="@dimen/_15sdp"
                android:background="@drawable/mobile_number_button_selection"
                android:drawableLeft="@drawable/google"
                android:fontFamily="@font/nunito_extrabold"
                android:gravity="center"
                android:padding="@dimen/_10sdp"
                android:text="@string/google"
                android:textColor="@color/black"
                android:textSize="@dimen/_11sdp"
                app:layout_constraintBottom_toTopOf="@+id/loginTermandCnditionTV"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/loginwithIMG" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/facebookTV"
                android:layout_width="@dimen/_120sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:background="@drawable/mobile_number_button_selection"
                android:drawableLeft="@drawable/facebook"
                android:fontFamily="@font/nunito_extrabold"
                android:gravity="center"
                android:textColor="@color/black"
                android:padding="@dimen/_10sdp"
                android:text="@string/facebook"
                android:textSize="@dimen/_11sdp"
                app:layout_constraintBottom_toTopOf="@+id/loginTermandCnditionTV"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/loginwithIMG" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:id="@+id/loginTermandCnditionTV"
                android:textSize="@dimen/_10sdp"
                android:textColor="@color/black"

                app:fontFamily="@font/montserrat_semibold"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:layout_marginBottom="@dimen/_15sdp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>


    </FrameLayout>
</layout>